Button fix on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -231,6 +231,7 @@ body {
   background-color: transparent;
   margin: 0;
   padding: 0;
+  height: 100%;
 }
 
 .fa.fa-search {
